# min2phase_rust

./: Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
tests/: issues_test.rs  random_solve.rs
